# jira-symphony

./: .gitignore  LICENSE  README.md  pyproject.toml
src/jira_symphony/: __init__.py  __main__.py  claude_worker.py  cli.py  config.py  jira_client.py  migration.py  models.py  onboarding.py  orchestrator.py  prompt_renderer.py  router.py  state.py  web.py  workspace.py
src/jira_symphony/git_provider/: __init__.py  base.py  github.py  gitlab.py
src/jira_symphony/prompt_templates/: default.md.j2
src/jira_symphony/static/: index.html  setup.html
