[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-symphony"
version = "0.2.0"
description = "Autonomous Jira-to-Claude Code orchestrator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
    "aiosqlite>=0.20",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "typer>=0.12",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
migration = ["pyyaml>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/jira_symphony"]

[project.scripts]
jira-symphony = "jira_symphony.__main__:main"
